--- a/source/less/blocks/impression-form.less
+++ b/source/less/blocks/impression-form.less
@@ -51,9 +51,25 @@
 
 @media (min-width: @tablet-width) {
   .impression-form {
-    width: 50%;
+    padding-top: 0;
+    padding-right: 52px;
+    margin-right: 58px;
     border-right: 1px solid @grey-border;
     order: -1;
+
+    &__label {
+      font-size: 21px;
+      text-align: left;
+      margin-bottom: 74px;
+    }
+
+    &__input {
+      margin-bottom: 52px;
+    }
+
+    &__input-label {
+      padding-left: 77px;
+    }
   }
 }
 
