--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,5 +1,5 @@
 .form {
-  width: 279px;
+  max-width: 279px;
   margin: 0 auto;
   margin-bottom: 74px;
 
@@ -26,7 +26,15 @@
     margin: 0 auto;
 
     &__wrapper {
-      border-bottom: none;
+      width: 440px;
+      margin: 0 auto;
+      padding-top: 15px;
+      margin-bottom: 56px;
+    }
+
+    &__title {
+      font-size: 30px;
+      margin-bottom: 31px;
     }
   }
 }
