--- a/source/less/blocks/comments-form.less
+++ b/source/less/blocks/comments-form.less
@@ -25,6 +25,12 @@
 @media (min-width: @tablet-width) {
   .comments-form {
     width: 100%;
+    padding-top: 36px;
+
+    &__input-label {
+      font-size: 21px;
+      margin-bottom: 59px;
+    }
 
     &__field {
       width: 100%;
@@ -34,7 +40,6 @@
 
 @media (min-width: @desctop-width) {
   .comments-form {
-    width: 100%;
 
     &__field {
       width: 100%;
