--- a/source/less/blocks/contacts-form.less
+++ b/source/less/blocks/contacts-form.less
@@ -31,6 +31,16 @@
 @media (min-width: @tablet-width) {
   .contacts-form {
     width: 100%;
+    padding-top: 33px;
+
+    &__label {
+      font-size: 21px;
+      margin-bottom: 26px;
+    }
+
+    &__input {
+      margin-bottom: 24px;
+    }
   }
 }
 
