--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -44,9 +44,11 @@
   .form {
     max-width: 960px;
     margin: 0 auto;
+    margin-bottom: 84px;
 
     &__wrapper {
       border-bottom: none;
+      margin-bottom: 42px;
     }
   }
 }
