--- a/source/less/blocks/introduce-form.less
+++ b/source/less/blocks/introduce-form.less
@@ -77,5 +77,30 @@
 @media (min-width: @desctop-width) {
   .introduce-form {
     width: 50%;
+    padding-left: 80px;
+
+    &__label {
+      margin-bottom: 56px;
+    }
+
+    &__input {
+      margin-bottom: 20px;
+    }
+
+    &__field {
+      height: 58px;
+    }
+
+    &__field--name {
+      width: 350px;
+    }
+
+    &__field--surname {
+      width: 311px;
+    }
+
+    &__field--patronymic {
+      width: 315px;
+    }
   }
 }
