--- a/source/less/blocks/sightseen-form.less
+++ b/source/less/blocks/sightseen-form.less
@@ -78,3 +78,25 @@
     }
   }
 }
+
+@media (min-width: @desctop-width) {
+  .sightseen-form {
+    &__label {
+      padding-top: 23px;
+    }
+
+    &__wrapper {
+      width: 956px;
+      justify-content: space-between;
+      margin: 0 auto;
+    }
+
+    &__input:first-of-type {
+      margin-right: 20px;
+    }
+
+    &__input:nth-of-type(2) {
+      margin-right: 20px;
+    }
+  }
+}
