--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -48,7 +48,10 @@
 
 @media (min-width: @desctop-width) {
   .feedback {
-    display: flex;
-    flex-wrap: wrap;
+    justify-content: space-between;
+
+    &__button {
+      width: 480px;
+    }
   }
 }
