--- a/source/less/blocks/impression-form.less
+++ b/source/less/blocks/impression-form.less
@@ -76,5 +76,23 @@
 @media (min-width: @desctop-width) {
   .impression-form {
     width: 50%;
+    margin-right: 0;
+
+    &__label {
+      text-align: center;
+      margin-bottom: 72px;
+    }
+
+    &__input-label {
+      padding-left: 78px;
+    }
+
+    &__input-label::before {
+      left: 3px;
+    }
+
+    &__field:checked + &__input-label::after {
+      left: 21px;
+    }
   }
 }
