adaptive pictures added

--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,5 +1,10 @@
 .map {
   margin-bottom: 28px;
+
+  &__img {
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 @media (min-width: @tablet-width) {
