--- a/source/less/blocks/reasons-list.less
+++ b/source/less/blocks/reasons-list.less
@@ -38,6 +38,8 @@
   }
 
   &__img {
+    width: 320px;
+    height: 260px;
     display: block;
   }
 
@@ -145,6 +147,7 @@
     }
 
     &__img {
+      width: 512px;
       height: 255px;
     }
 
@@ -275,6 +278,12 @@
 
 @media (min-width: @desctop-width) {
   .reasons-list {
+
+    &__img {
+      width: 800px;
+      height: 400px;
+    }
+
     &__bg-blue-wrapper {
       width: 380px;
       margin: 0 auto;
