--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -12,5 +12,10 @@
 @media (min-width: @desctop-width) {
   .page-header {
     height: 56px;
+
+    &__logo-img {
+       width: 186.643px;
+       height: 96.425px;
+    }
   }
 }
