--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -14,6 +14,7 @@
     height: 389px;
     padding-top: 90px;
     text-align: center;
+    overflow: hidden;
   }
 
   &--index::before {
@@ -32,8 +33,9 @@
     position: relative;
     height: 158px;
     padding-top: 52px;
-    text-align: center;
     margin-bottom: 39px;
+    text-align: center;
+    overflow: hidden;
   }
 
   &--inner::before {
@@ -48,10 +50,17 @@
     background-size: cover;
   }
 
+  @media (min-resolution: 1.5dppx) {
+  .page-main__header {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+  }
+ }
 }
 
 @media (min-width: @tablet-width) {
   .page-main__header {
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+
     &--index {
       height: 518px;
       padding-top: 77px;
@@ -67,22 +76,10 @@
       content: "";
       position: absolute;
       bottom: 0;
-      left: 29px;
-      width: 92.5%;
+      left: 0;
+      width: 768px;
       height: 57px;
-      background-image: url("../img/bg-intro-triangle-mobile.svg");
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-
-    &--index::after {
-      content: "";
-      position: absolute;
-      bottom: -10px;
-      left: -15px;
-      width: 105%;
-      height: 50px;
-      background-image: url("../img/bg-intro-triangle-mobile.svg");
+      background-image: url("../img/bg-intro-triangle-tablet.svg");
       background-repeat: no-repeat;
       background-size: cover;
     }
@@ -102,30 +99,26 @@
       content: "";
       position: absolute;
       bottom: 0;
-      left: 29px;
-      width: 92.5%;
+      left: 0;
+      width: 768px;
       height: 57px;
-      background-image: url("../img/bg-intro-triangle-mobile.svg");
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-
-    &--inner::after {
-      content: "";
-      position: absolute;
-      bottom: -10px;
-      left: -15px;
-      width: 105%;
-      height: 50px;
-      background-image: url("../img/bg-intro-triangle-mobile.svg");
+      background-image: url("../img/bg-intro-triangle-tablet.svg");
       background-repeat: no-repeat;
       background-size: cover;
     }
   }
+
+  @media (min-resolution: 1.5dppx) {
+  .page-main__header {
+    background-image: url("../img/bg-back-tablet@2x.jpg");
+  }
+ }
 }
 
 @media (min-width: @desctop-width) {
   .page-main__header {
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+
     &--index {
       height: 518px;
       padding-top: 77px;
@@ -141,26 +134,12 @@
       content: "";
       position: absolute;
       bottom: 0;
-      left: -4px;
-      width: 100%;
-      height: 60px;
-      background-image: url("../img/bg-intro-triangle-mobile.svg");
+      left: 0;
+      width: 1200px;
+      height: 57px;
+      background-image: url("../img/bg-intro-triangle-desktop.svg");
       background-repeat: no-repeat;
       background-size: cover;
-      display: none;
-    }
-
-    &--index::after {
-      content: "";
-      position: absolute;
-      bottom: -10px;
-      left: -15px;
-      width: 110%;
-      height: 50px;
-      background-image: url("../img/bg-intro-triangle-mobile.svg");
-      background-repeat: no-repeat;
-      background-size: cover;
-      display: none;
     }
 
     &--inner {
@@ -179,26 +158,18 @@
       content: "";
       position: absolute;
       bottom: 0;
-      left: -4px;
-      width: 100%;
-      height: 60px;
-      background-image: url("../img/bg-intro-triangle-mobile.svg");
+      left: 0;
+      width: 1200px;
+      height: 57px;
+      background-image: url("../img/bg-intro-triangle-desktop.svg");
       background-repeat: no-repeat;
       background-size: cover;
-      display: none;
-    }
-
-    &--inner::after {
-      content: "";
-      position: absolute;
-      bottom: -10px;
-      left: -15px;
-      width: 110%;
-      height: 50px;
-      background-image: url("../img/bg-intro-triangle-mobile.svg");
-      background-repeat: no-repeat;
-      background-size: cover;
-      display: none;
     }
   }
+
+  @media (min-resolution: 1.5dppx) {
+  .page-main__header {
+    background-image: url("../img/bg-back-desktop@2x.jpg");
+  }
+ }
 }
