--- a/source/less/blocks/pictures-list.less
+++ b/source/less/blocks/pictures-list.less
@@ -17,6 +17,8 @@
   }
 
   &__img {
+    width: 100%;
+    height: auto;
     display: block;
     margin-bottom: 15px;
   }
@@ -74,6 +76,14 @@
       }
     }
 
+    &__item:nth-child(2) {
+      padding: 0;
+    }
+
+    &__item:nth-child(3) {
+      padding: 0;
+    }
+
     &__wrapper {
       display: flex;
       justify-content: space-between;
@@ -91,22 +101,9 @@
     flex-wrap: wrap;
 
     &__item {
-      display: flex;
-      flex-direction: column;
       width: 33.3%;
-      padding: 0;
-      margin: 0;
       color: @white;
       border-bottom: none;
-      outline: 1px solid @black;
-    }
-
-    &__item:first-of-type {
-      width: 100%;
-    }
-
-    &__img {
-      margin: 0;
     }
 
     &__likes {
