--- a/source/less/globals/common.less
+++ b/source/less/globals/common.less
@@ -3,7 +3,7 @@ body {
   text-transform: uppercase;
   color: @black;
   line-height: 26px;
-  background-color: @white;
+  background-color: @grey-field;
   min-width: 320px;
 }
 
