--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,6 +1,7 @@
 .page-main {
+  background-color: @white;
   width: 100%;
-  margin-bottom: 49px;
+  padding-bottom: 49px;
 }
 
 .page-main__header {
@@ -58,6 +59,9 @@
 }
 
 @media (min-width: @tablet-width) {
+  .page-main {
+    padding-bottom: 58px;
+  }
   .page-main__header {
     background-image: url("../img/bg-back-tablet@1x.jpg");
 
@@ -116,6 +120,10 @@
 }
 
 @media (min-width: @desctop-width) {
+  .page-main {
+    padding-bottom: 66px;
+  }
+
   .page-main__header {
     background-image: url("../img/bg-back-desktop@1x.jpg");
 
