--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -1,4 +1,5 @@
 .reasons {
+    background-color: @white;
 
   &__wrapper {
     position: relative;
@@ -24,6 +25,7 @@
 
 @media (min-width: @tablet-width) {
   .reasons {
+
     &__wrapper {
       width: 500px;
       padding-top: 36px;
