--- a/source/less/blocks/introduce-form.less
+++ b/source/less/blocks/introduce-form.less
@@ -60,6 +60,10 @@
       margin-bottom: 24px;
     }
 
+    &__input-label {
+      cursor: pointer;
+    }
+
     &__field--name {
       width: 215px;
     }
