--- a/source/less/blocks/sightseen-form.less
+++ b/source/less/blocks/sightseen-form.less
@@ -76,6 +76,10 @@
     &__input:not(:last-of-type) {
       margin-bottom: 47px;
     }
+
+    &__input-label {
+      cursor: pointer;
+    }
   }
 }
 
