--- a/source/less/globals/variables.less
+++ b/source/less/globals/variables.less
@@ -6,12 +6,17 @@
 @blue-bg: #84b6d1;
 @light-blue-btn: #c0d9e8;
 
+@brown: #766357;
+@dark-brown: #604e43;
+@light-brown: #d8d3d0;
+
 @grey: #eeeeee;
 @grey-border: #e5e5e5;
 @grey-field: #f2f2f2;
 @grey-gallery: #eaeaea;
 @grey-shadow: #dbdbdb;
 @grey-icons: #5c6870;
+@grey-links-down: #b2b2b2;
 
 @white: #ffffff;
 
