--- a/source/less/blocks/pictures-list.less
+++ b/source/less/blocks/pictures-list.less
@@ -100,6 +100,7 @@
   .pictures-list {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 73px;
 
     &__item {
       position: relative;
