--- a/source/less/blocks/video-list.less
+++ b/source/less/blocks/video-list.less
@@ -116,10 +116,11 @@
   .video-list {
     &__wrapper {
       width: 420px;
+      margin-bottom: 71px;
     }
 
     &__clip {
-      left: 250px;
+      left: 199px;
     }
   }
 }
