--- a/source/less/globals/variables.less
+++ b/source/less/globals/variables.less
@@ -5,6 +5,9 @@
 @light-blue: #9ac2db;
 @blue-bg: #84b6d1;
 @light-blue-btn: #c0d9e8;
+@blue-hover: #669ec0;
+@blue-down: #5496bd;
+@blue-text: #88b6d1;
 
 @brown: #766357;
 @dark-brown: #604e43;
