--- a/source/less/blocks/cite-nav.less
+++ b/source/less/blocks/cite-nav.less
@@ -20,6 +20,18 @@
     }
   }
 
+  &__item:hover {
+    background-color: @blue-hover;
+  }
+
+  &__item:active {
+    background-color: @blue-down;
+
+    a {
+      color: @blue-text;
+    }
+  }
+
   &__item:last-child {
     border-bottom: none;
     box-shadow: inset 0 -2px 7px -1px @dark-blue;
@@ -57,11 +69,15 @@
         color: @black;
       }
 
-      a:hover {
-        color: @blue;
+      &:hover {
+        background-color: @white;
+
+        a {
+          color: @blue;
+        }
       }
 
-      a:active {
+      &:active a {
         color: @grey-links-down;
       }
     }
@@ -73,11 +89,11 @@
         color: @brown;
       }
 
-      a:hover {
+      &:hover a {
         color: @dark-brown;
       }
 
-      a:active {
+      &:active a {
         color: @light-brown;
       }
     }
