--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -52,6 +52,7 @@
   .gallery {
     max-width: 1200px;
     margin: 0 auto;
+    margin-bottom: 609px;
 
     &__wrapper {
       border-bottom: none;
