--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,6 +5,7 @@
 @import "globals/common";
 @import "globals/visually-hidden";
 @import "globals/columns";
+@import "globals/buttons";
 
 @import "blocks/content-wrapper";
 @import "blocks/page-header";
