--- a/source/less/blocks/contacts-form.less
+++ b/source/less/blocks/contacts-form.less
@@ -1,6 +1,17 @@
 .contacts-form {
+  position: relative;
   padding: 0;
   padding-top: 24px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -30px;
+    left: -21px;
+    width: 320px;
+    height: 1px;
+    background-color: @grey-border;
+  }
 
   &__label {
     font-size: @title-size;
@@ -10,14 +21,11 @@
     margin-bottom: 20px;
   }
 
-  &__field {
-    font-size: @title-size;
-    font-weight: bold;
-    width: 100%;
-    height: 57px;
-    padding-left: 22px;
-    background-color: @grey-field;
-    border: none;
+  &__input {
+    position: relative;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 13px;
   }
 
   &__input-label {
@@ -25,6 +33,42 @@
     padding-left: 23px;
     display: block;
     margin-bottom: 6px;
+  }
+
+  &__field {
+    font-size: @title-size;
+    font-weight: bold;
+    width: 100%;
+    height: 58px;
+    padding-left: 22px;
+    background-color: @grey-field;
+    border: none;
+  }
+
+  &__input--phone::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 58px;
+    height: 58px;
+    background-color: @grey-border;
+    background-image: url("../img/icon-phone.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  &__input--email::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 58px;
+    height: 58px;
+    background-color: @grey-border;
+    background-image: url("../img/icon-mail.svg");
+    background-repeat: no-repeat;
+    background-position: center;
   }
 }
 
