--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,12 +1,23 @@
 .form {
-  max-width: 279px;
+  max-width: 282px;
   margin: 0 auto;
-  margin-bottom: 74px;
+  margin-bottom: 25px;
 
   &__wrapper {
+    position: relative;
     text-align: center;
     padding-bottom: 3px;
     margin-bottom: 18px;
+  }
+
+  &__wrapper::after {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: -21px;
+    width: 320px;
+    height: 1px;
+    background-color: @grey-border;
   }
 
   &__title {
