--- a/source/less/blocks/reasons-list.less
+++ b/source/less/blocks/reasons-list.less
@@ -283,6 +283,11 @@
       padding-left: 24px;
     }
 
+    &--bg-grey:nth-child(7)::before,
+    &--bg-grey:nth-child(7)::after {
+      display: none;
+    }
+
     &--bg-blue {
       display: flex;
       width: 100%;
