--- a/source/less/blocks/video-list.less
+++ b/source/less/blocks/video-list.less
@@ -100,6 +100,7 @@
   .video-list {
     &__wrapper {
       width: 420px;
+      margin-bottom: 74px;
     }
 
     &__title {
@@ -107,6 +108,29 @@
       padding: 0;
       margin: 0;
       margin-bottom: 31px;
+    }
+
+    &__player {
+      top: 584px;
+      left: 0;
+      width: 100%;
+      height: 93px;
+    }
+
+    &__line {
+      bottom: 45px;
+      left: 93px;
+      width: 389px;
+      height: 3px;
+    }
+
+    &__handle {
+      bottom: 42px;
+      left: 206px;
+    }
+
+    &__panel {
+      display: none;
     }
   }
 }
@@ -120,6 +144,17 @@
 
     &__clip {
       left: 199px;
+    }
+
+    &__player {
+      top: 581px;
+      left: 199px;
+      width: 800px;
+      height: 93px;
+    }
+
+    &__line {
+      width: 540px;
     }
   }
 }
