--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -35,13 +35,17 @@
   .form {
     max-width: 648px;
     margin: 0 auto;
-    margin-bottom: 80px;
+    margin-bottom: 23px;
 
     &__wrapper {
       width: 440px;
       margin: 0 auto;
       padding-top: 15px;
       margin-bottom: 56px;
+    }
+
+    &__wrapper::after {
+     display: none;
     }
 
     &__title {
