--- a/source/less/blocks/contacts-form.less
+++ b/source/less/blocks/contacts-form.less
@@ -77,6 +77,10 @@
     width: 100%;
     padding-top: 33px;
 
+    &::after {
+      display: none;
+    }
+
     &__label {
       font-size: 21px;
       margin-bottom: 26px;
