--- a/source/less/blocks/comments-form.less
+++ b/source/less/blocks/comments-form.less
@@ -61,6 +61,17 @@
 
 @media (min-width: @desctop-width) {
   .comments-form {
+    padding-top: 36px;
+
+    &::after {
+      top: 48px;
+      width: 279px;
+    }
+
+    &::before {
+      top: 48px;
+      width: 279px;
+    }
 
     &__field {
       width: 100%;
