--- a/source/less/blocks/introduce-form.less
+++ b/source/less/blocks/introduce-form.less
@@ -60,13 +60,9 @@
     width: 265px;
 
     &::after {
-      content: "";
-      position: absolute;
       bottom: -47px;
       left: 143px;
       width: 124px;
-      height: 1px;
-      background-color: @grey-border;
     }
 
     &__label {
@@ -103,6 +99,12 @@
   .introduce-form {
     width: 50%;
     padding-left: 80px;
+
+    &::after {
+      bottom: -46px;
+      left: 200px;
+      width: 279px;
+    }
 
     &__label {
       margin-bottom: 56px;
