--- a/source/less/blocks/sightseen-form.less
+++ b/source/less/blocks/sightseen-form.less
@@ -116,8 +116,19 @@
 
 @media (min-width: @desctop-width) {
   .sightseen-form {
+
+    &::after {
+      top: 78px;
+      width: 279px;
+    }
+
+    &::before {
+      top: 78px;
+      width: 279px;
+    }
+
     &__label {
-      padding-top: 23px;
+      padding-top: 24px;
     }
 
     &__wrapper {
