--- a/source/less/blocks/comments-form.less
+++ b/source/less/blocks/comments-form.less
@@ -19,7 +19,18 @@
     padding-left: 20px;
     background-color: @grey-field;
     border: none;
+    outline: none;
   }
+
+    &__field:hover {
+      background-color: @grey-border;
+    }
+
+    &__field:active,
+    &__field:focus {
+      background-color: @white;
+      outline: 4px solid @grey-main-decor;
+    }
 }
 
 @media (min-width: @tablet-width) {
