map-marker done

--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,14 +1,37 @@
 .map {
-  margin-bottom: 28px;
+  position: relative;
+  padding-bottom: 385px;
 
   &__img {
+    position: absolute;
     max-width: 100%;
     height: auto;
+  }
+
+  &__marker {
+    position: absolute;
+    top: 160px;
+    left: 146px;
   }
 }
 
 @media (min-width: @tablet-width) {
   .map {
     margin-bottom: 12px;
+    padding-bottom: 357px;
+
+    &__marker {
+      top: 164px;
+      left: 368px;
+    }
+  }
+}
+
+@media (min-width: @desctop-width) {
+  .map {
+    &__marker {
+      top: 162px;
+      left: 586px;
+    }
   }
 }
