--- a/source/less/blocks/content-wrapper.less
+++ b/source/less/blocks/content-wrapper.less
@@ -1,7 +1,8 @@
 .content-wrapper {
+  background-color: @white;
   max-width: 320px;
   margin: 0 auto;
-      box-shadow: 0 0 15px 0 @grey-shadow;
+  box-shadow: 0 0 15px 0 @grey-shadow;
 }
 
 @media (min-width: @tablet-width) {
