--- a/source/less/blocks/video-list.less
+++ b/source/less/blocks/video-list.less
@@ -130,7 +130,38 @@
     }
 
     &__panel {
-      display: none;
+      background: none;
+      top: 584px;
+      left: 0;
+      width: 100%;
+      height: 93px;
+    }
+
+    &__replay {
+      top: 35px;
+      left: 35px;
+
+      svg {
+        fill: @white;
+      }
+    }
+
+    &__subtitles {
+      top: 36px;
+      right: 92px;
+
+      svg {
+        fill: @white;
+      }
+    }
+
+    &__fullscreen {
+      top: 36px;
+      right: 42px;
+
+      svg {
+        fill: @white;
+      }
     }
   }
 }
@@ -155,6 +186,14 @@
 
     &__line {
       width: 540px;
+    }
+
+    &__panel {
+      background: none;
+      top: 581px;
+      left: 199px;
+      width: 800px;
+      height: 93px;
     }
   }
 }
