contacts hover/active

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -24,6 +24,14 @@
       left: 102px;
       top: -2px;
     }
+
+    svg:hover {
+      fill: @blue;
+    }
+
+    svg:active {
+      fill: @grey-links-down;
+    }
   }
 }
 
