--- a/source/less/blocks/social-list.less
+++ b/source/less/blocks/social-list.less
@@ -32,3 +32,15 @@
     fill: @white;
   }
 }
+
+.social-list__item:hover {
+  background-color: @blue-hover;
+}
+
+.social-list__item:active {
+  background-color: @blue-down;
+
+  svg {
+    fill: @blue-text;
+  }
+}
