--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -1,30 +1,30 @@
 .gallery {
   margin-bottom: 328px;
+}
 
-  &__wrapper {
-    text-align: center;
-    border-bottom: 1px solid @grey-border;
-    padding-bottom: 27px;
-    margin-bottom: 2px;
-  }
+.gallery__wrapper {
+  text-align: center;
+  border-bottom: 1px solid @grey-border;
+  padding-bottom: 27px;
+  margin-bottom: 2px;
+}
 
-  &__title {
-    font-size: @title-size;
-    margin-bottom: 26px;
-  }
+.gallery__title {
+  font-size: @title-size;
+  margin-bottom: 26px;
+}
 
-  &__description {
-    width: 275px;
-    margin: 0 auto;
-    font-size: @regular-size;
-    line-height: @regular-line-height;
-  }
+.gallery__description {
+  width: 275px;
+  margin: 0 auto;
+  font-size: @regular-size;
+  line-height: @regular-line-height;
+}
 
-  &__list {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-  }
+.gallery__list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 @media (min-width: @tablet-width) {
@@ -32,21 +32,21 @@
     max-width: 648px;
     margin: 0 auto;
     margin-bottom: 575px;
+  }
 
-    &__wrapper {
-      border-bottom: none;
-      margin-bottom: 42px;
-    }
+  .gallery__wrapper {
+    border-bottom: none;
+    margin-bottom: 42px;
+  }
 
-    &__title {
-      font-size: 30px;
-      padding-top: 35px;
-      padding-bottom: 5px;
-    }
+  .gallery__title {
+    font-size: 30px;
+    padding-top: 35px;
+    padding-bottom: 5px;
+  }
 
-    &__description {
-      width: 440px;
-    }
+  .gallery__description {
+    width: 440px;
   }
 }
 
@@ -55,14 +55,14 @@
     max-width: 1200px;
     margin: 0 auto;
     margin-bottom: 609px;
+  }
 
-    &__wrapper {
-      border-bottom: none;
-      margin-bottom: 43px;
-    }
+  .gallery__wrapper {
+    border-bottom: none;
+    margin-bottom: 43px;
+  }
 
-    &__description {
-      width: 440px;
-    }
+  .gallery__description {
+    width: 440px;
   }
 }
