--- a/source/less/blocks/cite-nav.less
+++ b/source/less/blocks/cite-nav.less
@@ -3,8 +3,9 @@
   padding: 0;
   margin: 0;
   background-color: @blue;
+}
 
-  &__item {
+.cite-nav__item {
     text-align: center;
     padding-top: 7px;
     padding-bottom: 7px;
@@ -20,11 +21,11 @@
     }
   }
 
-  &__item:hover {
+  .cite-nav__item:hover {
     background-color: @blue-hover;
   }
 
-  &__item:active {
+  .cite-nav__item:active {
     background-color: @blue-down;
 
     a {
@@ -32,11 +33,10 @@
     }
   }
 
-  &__item:last-child {
+  .cite-nav__item:last-child {
     border-bottom: none;
     box-shadow: inset 0 -2px 7px -1px @dark-blue;
   }
-}
 
 @media (min-width: @tablet-width) {
   .cite-nav {
@@ -46,55 +46,55 @@
     background-color: @white;
     padding-top: 8px;
     padding-left: 1px;
+  }
 
-    &__item:last-child {
-      box-shadow: none;
-      margin-right: 0;
+  .cite-nav__item:last-child {
+    box-shadow: none;
+    margin-right: 0;
+  }
+
+  .cite-nav__item:nth-child(2) {
+    margin-right: 210px;
+  }
+
+  .cite-nav__item {
+    width: 20%;
+    padding: 0;
+    margin-right: 45px;
+    border: none;
+
+    a {
+      font-size: @regular-size;
+      color: @black;
     }
+  }
 
-    &__item:nth-child(2) {
-      margin-right: 210px;
+  .cite-nav__item:hover {
+    background-color: @white;
+
+    a {
+      color: @blue;
     }
+  }
 
-    &__item {
-      width: 20%;
-      padding: 0;
-      margin-right: 45px;
-      border: none;
+  .cite-nav__item:active a {
+    color: @grey-links-down;
+  }
 
-      a {
-        font-size: @regular-size;
-        color: @black;
-      }
+  .cite-nav__item--active {
+    cursor: pointer;
 
-      &:hover {
-        background-color: @white;
-
-        a {
-          color: @blue;
-        }
-      }
-
-      &:active a {
-        color: @grey-links-down;
-      }
+    a {
+      color: @brown;
     }
+  }
 
-    &__item--active {
-      cursor: pointer;
+  .cite-nav__item--active:hover a {
+    color: @dark-brown;
+  }
 
-      a {
-        color: @brown;
-      }
-
-      &:hover a {
-        color: @dark-brown;
-      }
-
-      &:active a {
-        color: @light-brown;
-      }
-    }
+  .cite-nav__item--active:active a {
+    color: @light-brown;
   }
 }
 
@@ -103,9 +103,9 @@
     display: flex;
     justify-content: space-between;
     background-color: @white;
+  }
 
-    &__item {
-      margin-right: 0;
-    }
+  .cite-nav__item {
+    margin-right: 0;
   }
 }
