--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -2,33 +2,33 @@
   max-width: 282px;
   margin: 0 auto;
   margin-bottom: 25px;
+}
 
-  &__wrapper {
-    position: relative;
-    text-align: center;
-    padding-bottom: 3px;
-    margin-bottom: 18px;
-  }
+.form__wrapper {
+  position: relative;
+  text-align: center;
+  padding-bottom: 3px;
+  margin-bottom: 18px;
+}
 
-  &__wrapper::after {
-    content: "";
-    position: absolute;
-    bottom: -1px;
-    left: -21px;
-    width: 320px;
-    height: 1px;
-    background-color: @grey-border;
-  }
+.form__wrapper::after {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  left: -21px;
+  width: 320px;
+  height: 1px;
+  background-color: @grey-border;
+}
 
-  &__title {
-    font-size: @title-size;
-    margin-bottom: 26px;
-  }
+.form__title {
+  font-size: @title-size;
+  margin-bottom: 26px;
+}
 
-  &__description {
-    font-size: @regular-size;
-    line-height: @regular-line-height;
-  }
+.form__description {
+  font-size: @regular-size;
+  line-height: @regular-line-height;
 }
 
 @media (min-width: @tablet-width) {
@@ -36,22 +36,22 @@
     max-width: 648px;
     margin: 0 auto;
     margin-bottom: 23px;
+  }
 
-    &__wrapper {
-      width: 440px;
-      margin: 0 auto;
-      padding-top: 15px;
-      margin-bottom: 56px;
-    }
+  .form__wrapper {
+    width: 440px;
+    margin: 0 auto;
+    padding-top: 15px;
+    margin-bottom: 56px;
+  }
 
-    &__wrapper::after {
-      display: none;
-    }
+  .form__wrapper::after {
+    display: none;
+  }
 
-    &__title {
-      font-size: 30px;
-      margin-bottom: 31px;
-    }
+  .form__title {
+    font-size: 30px;
+    margin-bottom: 31px;
   }
 }
 
@@ -60,10 +60,10 @@
     max-width: 960px;
     margin: 0 auto;
     margin-bottom: 19px;
+  }
 
-    &__wrapper {
-      border-bottom: none;
-      margin-bottom: 42px;
-    }
+  .form__wrapper {
+    border-bottom: none;
+    margin-bottom: 42px;
   }
 }
