--- a/source/less/blocks/hotel-request.less
+++ b/source/less/blocks/hotel-request.less
@@ -4,59 +4,55 @@
   padding-left: 21px;
   padding-right: 20px;
   text-align: center;
+}
 
-  &__title {
-    display: block;
-    font-size: 21px;
-    margin-bottom: 19px;
-  }
+.hotel-request__title {
+  display: block;
+  font-size: 21px;
+  margin-bottom: 19px;
+}
 
-  &__text {
-    font-size: @regular-size;
-    line-height: @regular-line-height;
-    margin-bottom: 35px;
-  }
+.hotel-request__text {
+  font-size: @regular-size;
+  line-height: @regular-line-height;
+  margin-bottom: 35px;
+}
 
-  &__link {
-    display: block;
-    width: 100%;
-    height: 58px;
-    padding-top: 16px;
-    font-size: 21px;
-    font-weight: bold;
-    text-decoration: none;
-    color: @white;
-    background-color: @blue;
-  }
+.hotel-request__link {
+  display: block;
+  width: 100%;
+  height: 58px;
+  padding-top: 16px;
+  font-size: 21px;
+  font-weight: bold;
+  text-decoration: none;
+  color: @white;
+  background-color: @blue;
 }
 
 @media (min-width: @tablet-width) {
-  .hotel-request {
-    &__wrapper {
-      width: 458px;
-      margin: 0 auto;
-    }
+  .hotel-request__wrapper {
+    width: 458px;
+    margin: 0 auto;
+  }
 
-    &__title {
-      font-size: 30px;
-      margin-top: 27px;
-      margin-bottom: 30px;
-    }
+  .hotel-request__title {
+    font-size: 30px;
+    margin-top: 27px;
+    margin-bottom: 30px;
+  }
 
-    &__text {
-      margin-bottom: 43px;
-    }
+  .hotel-request__text {
+    margin-bottom: 43px;
+  }
 
-    &__new-line {
-      display: block;
-    }
+  .hotel-request__new-line {
+    display: block;
   }
 }
 
 @media (min-width: @desctop-width) {
-  .hotel-request {
-    &__text {
-      margin-bottom: 47px;
-    }
+  .hotel-request__text {
+    margin-bottom: 47px;
   }
 }
