--- a/source/less/blocks/impression-form.less
+++ b/source/less/blocks/impression-form.less
@@ -2,74 +2,74 @@
   position: relative;
   padding: 0;
   padding-top: 35px;
+}
 
-  &::after {
-    content: "";
-    position: absolute;
-    bottom: -44px;
-    left: -21px;
-    width: 320px;
-    height: 1px;
-    background-color: @grey-border;
-  }
+.impression-form::after {
+  content: "";
+  position: absolute;
+  bottom: -44px;
+  left: -21px;
+  width: 320px;
+  height: 1px;
+  background-color: @grey-border;
+}
 
-  &__label {
-    font-size: @title-size;
-    font-weight: bold;
-    display: block;
-    text-align: center;
-    margin-bottom: 37px;
-  }
+.impression-form__label {
+  font-size: @title-size;
+  font-weight: bold;
+  display: block;
+  text-align: center;
+  margin-bottom: 37px;
+}
 
-  &__input {
-    margin-bottom: 43px;
-  }
+.impression-form__input {
+  margin-bottom: 43px;
+}
 
-  &__field {
-    display: none;
-  }
+.impression-form__field {
+  display: none;
+}
 
-  &__input-label {
-    position: relative;
-    font-size: @title-size;
-    text-transform: none;
-    font-weight: bold;
-    padding-left: 79px;
-  }
+.impression-form__input-label {
+  position: relative;
+  font-size: @title-size;
+  text-transform: none;
+  font-weight: bold;
+  padding-left: 79px;
+}
 
-  &__input-label:hover::before {
-    background-color: @grey-border;
-  }
+.impression-form__input-label:hover::before {
+  background-color: @grey-border;
+}
 
-  &__input-label:active::before {
-    background-color: @grey-main-decor;
-  }
+.impression-form__input-label:active::before {
+  background-color: @grey-main-decor;
+}
 
-  &__input-label::before {
-    content: "";
-    position: absolute;
-    top: -14px;
-    left: 0;
-    width: 55px;
-    height: 55px;
-    border-radius: 100%;
-    background-color: @grey-field;
-  }
+.impression-form__input-label::before {
+  content: "";
+  position: absolute;
+  top: -14px;
+  left: 0;
+  width: 55px;
+  height: 55px;
+  border-radius: 100%;
+  background-color: @grey-field;
+}
 
-  &__field:checked + &__input-label::after {
-    content: "";
-    position: absolute;
-    top: 3px;
-    left: 17px;
-    width: 21px;
-    height: 21px;
-    border-radius: 100%;
-    background-color: @black;
-  }
+.impression-form__field:checked + .impression-form__input-label::after {
+  content: "";
+  position: absolute;
+  top: 3px;
+  left: 17px;
+  width: 21px;
+  height: 21px;
+  border-radius: 100%;
+  background-color: @black;
+}
 
-  &__field:checked + &__input-label:active::after {
-    opacity: 0.3;
-  }
+.impression-form__field:checked + .impression-form__input-label:active::after {
+  opacity: 0.3;
 }
 
 @media (min-width: @tablet-width) {
@@ -78,37 +78,37 @@
     padding-right: 51px;
     margin-right: 58px;
     order: -1;
+  }
 
-    &::after {
-      bottom: -47px;
-      left: 0;
-      width: 125px;
-    }
+  .impression-form::after {
+    bottom: -47px;
+    left: 0;
+    width: 125px;
+  }
 
-    &::before {
-      content: "";
-      position: absolute;
-      top: 6px;
-      right: -1px;
-      width: 1px;
-      height: 293px;
-      background-color: @grey-border;
-    }
+  .impression-form::before {
+    content: "";
+    position: absolute;
+    top: 6px;
+    right: -1px;
+    width: 1px;
+    height: 293px;
+    background-color: @grey-border;
+  }
 
-    &__label {
-      font-size: 21px;
-      text-align: left;
-      margin-bottom: 74px;
-    }
+  .impression-form__label {
+    font-size: 21px;
+    text-align: left;
+    margin-bottom: 74px;
+  }
 
-    &__input {
-      margin-bottom: 52px;
-    }
+  .impression-form__input {
+    margin-bottom: 52px;
+  }
 
-    &__input-label {
-      padding-left: 77px;
-      cursor: pointer;
-    }
+  .impression-form__input-label {
+    padding-left: 77px;
+    cursor: pointer;
   }
 }
 
@@ -116,27 +116,27 @@
   .impression-form {
     width: 50%;
     margin-right: 0;
+  }
 
-    &::after {
-      bottom: -46px;
-      width: 279px;
-    }
+  .impression-form::after {
+    bottom: -46px;
+    width: 279px;
+  }
 
-    &__label {
-      text-align: center;
-      margin-bottom: 72px;
-    }
+  .impression-form__label {
+    text-align: center;
+    margin-bottom: 72px;
+  }
 
-    &__input-label {
-      padding-left: 78px;
-    }
+  .impression-form__input-label {
+    padding-left: 78px;
+  }
 
-    &__input-label::before {
-      left: 3px;
-    }
+  .impression-form__input-label::before {
+    left: 3px;
+  }
 
-    &__field:checked + &__input-label::after {
-      left: 21px;
-    }
+  .impression-form__field:checked + .impression-form__input-label::after {
+    left: 21px;
   }
 }
